--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Heitor Souza F",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
